fix layout bug on recent changes page

--- a/themes/maketylerweird/assets/css/muscle.less
+++ b/themes/maketylerweird/assets/css/muscle.less
@@ -738,6 +738,10 @@ ul#nav {
     margin: 0;
 }
 
+#recentchanges ul {
+    padding-left: 0;
+}
+
 /*==============================
 =   Override these styles
 =   to customize each viewport
